defini a margem da pagina como 0 Removi a barra lateral fiz a barra de menu ele ficar fixo alinhei os itens do display no centro a div fica comprimida e deixei os componentes espaçados para os efeitos aplicarem com um justify-content: space-between; width: 100%; adicionei um z-index: 99; para o display da barra sempre ficar pela frente

--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body{
+    height: 100%;
+    width: 100%;
+}
+
+body::-webkit-scrollbar{
+    display: none;
+}
+
+#main{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: orangered;
+}
+
 .nav-menu{
-    background: white;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    z-index: 99;
 }
